Saving before adding authentication
